add get userinfo swagger
