# docs/swagger.json
@@ -5,6 +5,39 @@
         "license": {}
     },
     "paths": {
+        "/v1/getUserInfo": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "用户"
+                ],
+                "summary": "获取用户信息",
+                "parameters": [
+                    {
+                        "description": "请求参数",
+                        "name": "entity",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/user.GetUserInfoReq"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/user.GetUserInfoRes"
+                        }
+                    }
+                }
+            }
+        },
         "/v1/test": {
             "post": {
                 "consumes": [
@@ -56,6 +89,28 @@
             "properties": {
                 "msg": {
                     "type": "string"
+                }
+            }
+        },
+        "user.GetUserInfoReq": {
+            "type": "object",
+            "properties": {
+                "passport": {
+                    "type": "string"
+                }
+            }
+        },
+        "user.GetUserInfoRes": {
+            "type": "object",
+            "properties": {
+                "nickname": {
+                    "type": "string"
+                },
+                "passport": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "integer"
                 }
             }
         }
